--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,8 @@ project:
   type: website
 
 website:
-  title: "Tales Gomes"
+  title: "Data Tales"
+  favicon: statics/favicon.png
   site-url: https://blog-talesgomes.netlify.app
   repo-url: https://github.com/talesgomes27/quarto-blog
   open-graph: true
