--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 website:
   title: "Tales Gomes"
   image: statics/social.jpg
-  description: "Blog about Data, curiosities, learning and technology."
+  description: "Blog about Data Science, Curiosities, Learning and Technology."
   favicon: favicon.png
   site-url: https://blog-talesgomes.netlify.app
   repo-url: https://github.com/talesgomes27/quarto-blog
