--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,17 +4,12 @@ project:
 website:
   title: "Yet Another Data Blog"
   description: "A blog about data science, learning and technology by Tales Gomes"
-  image: statics/social.jpg
+  image: social.jpg
   favicon: favicon.png
   site-url: https://blog-talesgomes.netlify.app
   repo-url: https://github.com/talesgomes27/quarto-blog
   open-graph: true
-  twitter-card:
-    creator: "@talesgomes27"
-    title: "Yet Another Data Blog"
-    description: "A blog about data science, learning and technology by Tales Gomes"
-    image: statics/social.jpg
-    card-style: summary_large_image
+  twitter-card: true
   page-footer:
     left: "Blog made with 🤎 and [Quarto](https://quarto.org/), by Tales Gomes."
     right:
