include draft post, twitter card and opengraph

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ posts/netflix-amazon-comparison/dataset/
 
 posts/bike-share-navigate/database/
 posts/bike-share-navigate/index_cache/
+
+
+posts/bellabeat/bellabeat_data/
+posts/bellabeat/index_cache/
